# Acorn_Currency_API/src/routes/user.js
@@ -7,4 +7,8 @@ routes.post('/', controllers.addUser);
 routes.put('/:id', controllers.changeUserInfo);
 routes.delete('/:id', controllers.deleteUser);
 
+routes.get('/:id/userSkill', controllers.getAllUserSkills);
+routes.post('/userSkill', controllers.addUserSkill);
+routes.delete('/userSkill');
+
 module.exports = routes;
